--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 
 # Jupyter Notebook
-.ipynb_checkpoints
+*.ipynb_checkpoints
 
 #graphs.graphml
 *.graphml
 *.weighted.edgelist
 *.edgelist
-*.adjlist
+
 
 
 
 
 # crawled jsons 
-data_collection/data
+data_collection/data/**
